remove category totally
