# src/routes/account.ts
@@ -5,8 +5,8 @@ import {
   fetchPlan,
   updatePlan,
   deletePlan,
-  fetchAllCategories,
-  createNewCategory,
+  // fetchAllCategories,
+  // createNewCategory,
   fetchAllBookmarkedPlans,
   addBookmark,
   removeBookmark,
@@ -16,7 +16,7 @@ const router = express.Router()
 
 router.route('/plans/').get(fetchAllPlans).post(createNewPlan)
 router.route('/plans/:planId').get(fetchPlan).put(updatePlan).delete(deletePlan)
-router.route('/categories').get(fetchAllCategories).post(createNewCategory)
+// router.route('/categories').get(fetchAllCategories).post(createNewCategory)
 router.route('/bookmarks').get(fetchAllBookmarkedPlans)
 router.route('/bookmarks/:planId').post(addBookmark).delete(removeBookmark)
 
