# src/routes/plans.ts
@@ -3,8 +3,8 @@ import {
   fetchAllPlans,
   fetchPlan,
   fetchUserWithPlans,
-  fetchCategoryWithPlans,
-  fetchAllCategories,
+  // fetchCategoryWithPlans,
+  // fetchAllCategories,
   fetchAllNearbyPlans,
 } from '../controllers/plans'
 
@@ -12,9 +12,9 @@ const router = express.Router()
 
 router.route('/').get(fetchAllPlans)
 // Specific routes first
-router.route('/category').get(fetchAllCategories)
+// router.route('/category').get(fetchAllCategories)
 router.route('/user/:userId').get(fetchUserWithPlans)
-router.route('/category/:categoryId').get(fetchCategoryWithPlans)
+// router.route('/category/:categoryId').get(fetchCategoryWithPlans)
 
 router.route('/nearby').get(fetchAllNearbyPlans)
 
